--- a/src/StartMenu.css
+++ b/src/StartMenu.css
@@ -1,7 +1,29 @@
-body{
-    background-image: url("./assets/bg1.png");
-    
-    background-repeat: no-repeat;
-    
-    background-size: 100vw 100vh;
-  }
+body {
+  background-image: url("./assets/bg1.png");
+
+  background-repeat: no-repeat;
+
+  background-size: 100vw 100vh;
+}
+.button_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Set the container height to occupy the full viewport height */
+}
+.play_button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+  margin: 10px 0;
+}
+.leader_button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+}
